--- a/style/style.css
+++ b/style/style.css
@@ -116,6 +116,18 @@ main {
 .cards-section{
     margin-top: 2rem;
     position: relative;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.scroll-back-button {
+    content: '';
+    position: absolute;
+    left: 0rem;
+    top: 50%;
+    border-radius: 50%;
+    height: 32px;
+    width: 32px;
 }
 
 .cards-section-header {
@@ -131,6 +143,7 @@ main {
     font-size: 1.4rem;
     color: white;
     margin: 0px;
+    font-weight: 550;
 }
 
 .cards-see-all {
@@ -147,6 +160,7 @@ main {
     gap: 2rem;
     overflow-x: scroll;
     scrollbar-width: none;
+    scroll-snap-type: x mandatory;
 }
 
 .card {
@@ -158,6 +172,7 @@ main {
     flex-shrink: 0;
     flex-grow: 0;
     flex-basis:content;
+    scroll-snap-align: center;
 }
 
 .card img {
@@ -216,14 +231,14 @@ main {
     box-shadow: 0 0 8px #fff;
 }
 
-.cards-row-scroll-button {
-    position: absolute;
+.scroll-forward-button {
     content: '';
+    position: absolute;
     right: 0rem;
     top: 50%;
     border-radius: 50%;
-    height: 40px;
-    width: 40px;
+    height: 32px;
+    width: 32px;
 }
 
 
